[project]
name = "subscription-negotiator"
version = "0.1.0"
description = "Automated Personal Subscription Analyst & Negotiation Assistant built on Google ADK 2.0"
readme = "README.md"
requires-python = ">=3.11, <3.14"
dependencies = [
    "google-adk>=2.0.0",
    "google-genai>=1.0.0",
    "mcp>=1.0.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
]
